--- a/lab4/app/templates/base.html
+++ b/lab4/app/templates/base.html
@@ -32,6 +32,11 @@
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{{ url_for('users.change', user_id=current_user.id)}}">Изменить пароль</a>
                   </li>
+                                    <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('auth.logout') }}">Выйти</a>
+                  </li>
+                  {% else %}
+                    <a class="nav-link" aria-current="page" href="{{ url_for('auth.login') }}">Войти</a>
                   {% endif %}
                 </ul>
               </div>
